# internal/gateway/routes/user.go
@@ -7,12 +7,12 @@ import (
 	"net/http"
 )
 
-func registerUserRoutes(router *httprouter.Router, user *handlers.UserHandler, middleware *middlewares.CustomMiddleware, feed *handlers.FeedHandler) {
+func registerUserRoutes(router *httprouter.Router, user *handlers.UserHandler, auth *handlers.AuthHandler, middleware *middlewares.CustomMiddleware, feed *handlers.FeedHandler) {
 	userMiddleware := middleware.UserContextMiddleware
 
 	router.Handler(http.MethodGet, "/v1/users/:id", userMiddleware(http.HandlerFunc(user.GetUserHandler)))
 	router.Handler(http.MethodPut, "/v1/users/:id/follow", userMiddleware(http.HandlerFunc(user.FollowUserHandler)))
 	router.Handler(http.MethodPut, "/v1/users/:id/unfollow", userMiddleware(http.HandlerFunc(user.UnFollowUserHandler)))
 	router.HandlerFunc(http.MethodGet, "/v1/user/feed", feed.GetUserFeedHandler)
-	//router.Handler(http.MethodGet, "/v1/user/feed", userMiddleware(http.HandlerFunc(feed.GetUserFeedHandler)))
+	router.HandlerFunc(http.MethodPost, "/v1/users/authentication", auth.RegisterUserHandler)
 }
