# internal/service/service_models/user.go
@@ -1,11 +1,35 @@
 package service_models
 
-import "time"
+import (
+	"golang.org/x/crypto/bcrypt"
+	"time"
+)
 
 type User struct {
 	ID        int64     `json:"id"`
 	Username  string    `json:"username"`
 	Email     string    `json:"email"`
-	Password  string    `json:"-"`
+	Password  Password  `json:"-"`
 	CreatedAt time.Time `json:"created_at"`
+}
+
+type RegisterUserPayload struct {
+	Username string `json:"username" validate:"required,max=50"`
+	Email    string `json:"email" validate:"required,email,max=255"`
+	Password string `json:"password" validate:"required,min=3,max=32"`
+}
+
+type Password struct {
+	Text *string
+	Hash []byte
+}
+
+func (p *Password) Set(text string) error {
+	hash, err := bcrypt.GenerateFromPassword([]byte(text), bcrypt.DefaultCost)
+	if err != nil {
+		return err
+	}
+	p.Hash = hash
+	p.Text = &text
+	return nil
 }
